# cpp-stringswitch

./: .clang-format  CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/include/stringswitch/: stringswitch.h  stringswitch_impl.h
tests/: CMakeLists.txt  test_stringswitch.cpp  test_stringswitch_creation.cpp
